--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "AngularData",
   "version": "0.0.1",
-  "description": "An application for taking attendance at meetups. Part of my Data Driven Web Applications with Angular.js course at Lynda.com",
+  "description": "An application for taking attendance at meetups.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/planetoftheweb/angulardata.git"
+    "url": "https://github.com/mtuan93/angular_user_registration.git"
   },
-  "author": "Ray Villalobos",
+  "author": "Tuan Nguyen",
   "devDependencies": {
     "gulp": "^3.8.8",
     "gulp-util": "^2.2.20",
